' Generated by UML Generator
' Encoded: rLRVRzem47xFN-77C0fYi4aLKgkYqQf8HKE3jscgJ79GQuwD76ThrfM_VRP3QFo3hKFRghr4iU_ptNVVtJcvo2KMiiXeb7ycR8C5pb12SPwFf1HaMKYO99pDoJT0lUYEf80I8X8AKMHGQ8uf5kKxJ9E2Oid50dA97YA4EhbZ6NfOT8OOVFMsuvO-tb6FhLJUhWfAPuAl8C-vgB1nQuY-S9BMa94o9GHB-0Nk6d3wVZK6bQRCW4a7zLWdDSEbu9HECSDh42QTzeCIIfBa4MMOi1YBTQuIKXAnzSTFdWCtKAK8P1lAIxqUAwv3TCCJJFMhaQiG36TGEzLRxfgaGqIOrAyItpULNJINjNfjbqLiQjs8UuASg2V8NkqYweAqrs1eN-wJqBerKz28UULFc_QypRvHUhII81JNEEDCtj6osXsYb1TB2gtwvKb7hsECZakSGsMvcjLdL2-zxVLwjddKD0zsvXAmoAS5bMH32GZ7HG1XUUaR1DnBWQ_vk64uhRmRuPCTuHsDk2eyA67TaZpb_DDZrWmyyum_5E63kXw49LpN_M0XB08lqyqMXVXWzB_Gqx_LkuVcO2-bbLqbvVvk-J1QNDw-RdHLhziV-8Y-XHW440CBySP6t4ocauKLfd-w6mu7qtV6Az3YMX8zCBIS76YY_s4WzjNnGI_JxJwFVzhoV-eQLr51h702Q58d2KRGxN4jiJsY9RR7tf7RvzwHmP-WLvsEz_sAl1y3ZR8xmFlcTRlVpnloXG3ddcXXbALH6E9B4jcNly_Olj5SkgurmDM7s4HzUu1bO79zgeqk339nx3ODnnZWS04iLV_IFm0
' URL: http://www.plantuml.com/plantuml/uml/rLRVRzem47xFN-77C0fYi4aLKgkYqQf8HKE3jscgJ79GQuwD76ThrfM_VRP3QFo3hKFRghr4iU_ptNVVtJcvo2KMiiXeb7ycR8C5pb12SPwFf1HaMKYO99pDoJT0lUYEf80I8X8AKMHGQ8uf5kKxJ9E2Oid50dA97YA4EhbZ6NfOT8OOVFMsuvO-tb6FhLJUhWfAPuAl8C-vgB1nQuY-S9BMa94o9GHB-0Nk6d3wVZK6bQRCW4a7zLWdDSEbu9HECSDh42QTzeCIIfBa4MMOi1YBTQuIKXAnzSTFdWCtKAK8P1lAIxqUAwv3TCCJJFMhaQiG36TGEzLRxfgaGqIOrAyItpULNJINjNfjbqLiQjs8UuASg2V8NkqYweAqrs1eN-wJqBerKz28UULFc_QypRvHUhII81JNEEDCtj6osXsYb1TB2gtwvKb7hsECZakSGsMvcjLdL2-zxVLwjddKD0zsvXAmoAS5bMH32GZ7HG1XUUaR1DnBWQ_vk64uhRmRuPCTuHsDk2eyA67TaZpb_DDZrWmyyum_5E63kXw49LpN_M0XB08lqyqMXVXWzB_Gqx_LkuVcO2-bbLqbvVvk-J1QNDw-RdHLhziV-8Y-XHW440CBySP6t4ocauKLfd-w6mu7qtV6Az3YMX8zCBIS76YY_s4WzjNnGI_JxJwFVzhoV-eQLr51h702Q58d2KRGxN4jiJsY9RR7tf7RvzwHmP-WLvsEz_sAl1y3ZR8xmFlcTRlVpnloXG3ddcXXbALH6E9B4jcNly_Olj5SkgurmDM7s4HzUu1bO79zgeqk339nx3ODnnZWS04iLV_IFm0
' Generated on: 2026-03-28T12:01:06.702654

@startuml
skinparam classAttributeIconSize 0
hide circle

class SalaryCalculatorTest {
  -salaryCalculator: SalaryCalculator = new SalaryCalculator()
  --
  ~testFullProfessorSalary(): void
  ~testAssociateProfessorSalary(): void
  ~testHeadOfDepartmentSalary(): void
}

class PayrollManager {
  +{static} main(args: String[]): void
}

class HeadOfDepartment {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: TaxCalculator
  --
  +HeadOfDepartment(start: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getSalaryAfterTax(monthlySalary: double): double
}

class SalaryCalculator {
  -baseSalaryFP: double = 5000
  -baseSalaryAP: double = 3000
  -yearsMultiplierFP: double = 50
  -yearsMultiplierAP: double = 20
  -extraHoD: double = 800
  --
  +calculateSalary(employee: HeadOfDepartment): double
  +calculateSalary(employee: FullProfessor): double
  +calculateSalary(employee: AssociateProfessor): double
  +calculateTax(income: double): double
}

class FullProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: TaxCalculator
  --
  +FullProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSalaryAfterTax(monthlySalary: double): double
  +getSurname(): String
}

class TaxCalculator {
  -{static} RATE_1: double = 0.23
  -{static} RATE_2: double = 0.33
  -{static} RATE_3: double = 0.43
  -{static} LIMIT_1: double = 28000
  -{static} LIMIT_2: double = 50000
  --
  +calculateTax(yearlyIncome: double): double
  +calculateSalary(employee: HeadOfDepartment): double
  +calculateSalary(employee: FullProfessor): double
  +calculateSalary(employee: AssociateProfessor): double
}

class AssociateProfessor {
  -employmentDate: LocalDate
  -surname: String
  -name: String
  -id: int
  -taxCalculator: TaxCalculator
  --
  +AssociateProfessor(employmentDate: LocalDate, surname: String, name: String, id: int)
  +getDateEmployment(): LocalDate
  +getSurname(): String
  +getSalaryAfterTax(monthlySalary: double): double
}

interface ICalculate {
  ~calculateSalary(employee: HeadOfDepartment): double
  ~calculateSalary(employee: FullProfessor): double
  ~calculateSalary(employee: AssociateProfessor): double
  ~calculateTax(income: double): double
}

SalaryCalculatorTest *-- SalaryCalculator
HeadOfDepartment *-- TaxCalculator
SalaryCalculator ..|> ICalculate
SalaryCalculator ..> HeadOfDepartment
SalaryCalculator ..> FullProfessor
SalaryCalculator ..> AssociateProfessor
FullProfessor *-- TaxCalculator
TaxCalculator ..|> ICalculate
TaxCalculator ..> HeadOfDepartment
TaxCalculator ..> FullProfessor
TaxCalculator ..> AssociateProfessor
AssociateProfessor *-- TaxCalculator
ICalculate ..> HeadOfDepartment
ICalculate ..> FullProfessor
ICalculate ..> AssociateProfessor
@enduml